# teleport-challenge

./: .gitignore  Cargo.toml  README.md  design.md
cli/: Cargo.toml  README.md
cli/src/: arg_parser.rs  client_cli.rs  main.rs
joblib/: Cargo.toml  README.md
joblib/src/: actors.rs  error.rs  errors.rs  events.rs  lib.rs  types.rs
joblib/src/actors/: broadcaster.rs  coordinator.rs  worker.rs
joblib/src/actors/broadcaster/: actor.rs  messages.rs
joblib/src/actors/coordinator/: actor.rs  messages.rs
joblib/src/actors/worker/: actor.rs  messages.rs
protobuf/: Cargo.toml  build.rs  jobservice.proto  remotejobs.proto
protobuf/src/: jobservice.proto  lib.rs
server/: Cargo.toml  README.md
server/src/: main.rs
server/src/interceptors/: cert.rs
server/src/services/: jobservice.rs
server/src/services/jobservice/: authorizer.rs  authz.rs
server/src/services/jobservice/authorizer/: authz_db.rs
tls/: alice.cert  alice.chain  alice.fullchain  alice.key  alice.pem  alice.req  bob.cert  bob.key  bob.pem  bob.req  ca.der  ca.key  ca.pem  charlie.cert  charlie.key  charlie.pem  charlie.req  eve.cert  eve.key  eve.pem  make-certs  openssl.cnf  server.cert  server.chain  server.fullchain  server.key  server.pem  server.req
tls/data/: alice.der  alice.fullchain  alice.key  alice.pem  alice.req  bob.chain  bob.der  bob.fullchain  bob.key  bob.pem  bob.req  charlie.der  charlie.fullchain  charlie.key  charlie.pem  charlie.req  client_ca.der  client_ca.key  client_ca.pem  eve.chain  eve.der  eve.fullchain  eve.key  eve.pem  server.der  server.fullchain  server.key  server.pem  server.req  server_ca.der  server_ca.key  server_ca.pem
