[package]
name = "cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
protobuf = { path = "../protobuf" }
clap = { version = "3.1.8", features = ["derive", "env"] }
tokio = { version = "1.17.0", features = ["full"] }
uuid = { version = "0.8.2", features = ["v4"] }
tonic = { version = "0.6.2", features = ["transport", "tls", "compression"] }
