[package]
name = "protobuf"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = {version = "0.6.2", features = ["tls", "compression"] }
prost = "0.9.0"

[build-dependencies]
tonic-build = { version =  "0.6.2", features = ["prost", "compression"]}
